fix(plateau): nicely clip overflowing part nav links

--- a/packages/plateau-layout/layout.css
+++ b/packages/plateau-layout/layout.css
@@ -47,6 +47,8 @@
       > a {
         font-weight: 400;
         font-size: 18px;
+        overflow: hidden;
+        text-overflow: ellipsis;
         &:link {
           text-decoration: none;
         }
